// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderTrophySVG snapshot > renders onedark scaffold consistently 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="506" height="280" viewBox="0 0 506 280" role="img" aria-label="trophy for alice">
  <title>Trophies for alice</title>
  
  <rect width="100%" height="100%" fill="#282c34" />
	<g transform="translate(16, 16)">
		<text x="0" y="24" fill="#e5c07b" font-size="18" font-family="Segoe UI, Arial, sans-serif" font-weight="600">Alice's Trophies</text>
	    <text x="0" y="44" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">alice</text>
  </g>
  
			<g transform="translate(16, 72)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#e5c07b"/>
					<text x="64" y="16" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#e5c07b" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #1</text>
				</g>
			</g>
		

			<g transform="translate(178, 72)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#e5c07b"/>
					<text x="64" y="16" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#e5c07b" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #2</text>
				</g>
			</g>
		

			<g transform="translate(340, 72)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#e5c07b"/>
					<text x="64" y="16" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#e5c07b" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #3</text>
				</g>
			</g>
		

			<g transform="translate(16, 174)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#e5c07b"/>
					<text x="64" y="16" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#e5c07b" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #4</text>
				</g>
			</g>
		

			<g transform="translate(178, 174)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#e5c07b"/>
					<text x="64" y="16" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#e5c07b" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #5</text>
				</g>
			</g>
		

			<g transform="translate(340, 174)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#e5c07b"/>
					<text x="64" y="16" fill="#e5c07b" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#e5c07b" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #6</text>
				</g>
			</g>
		
</svg>"
`;

exports[`renderTrophySVG snapshot > renders watchdog scaffold consistently 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" width="506" height="280" viewBox="0 0 506 280" role="img" aria-label="trophy for bob">
  <title>Trophies for bob</title>
  <defs><linearGradient id="bgGrad" gradientTransform="rotate(45)"><stop offset="0%" stop-color="#520806"/><stop offset="100%" stop-color="#021D4A"/></linearGradient></defs>
  <rect width="100%" height="100%" fill="url(#bgGrad)" />
	<g transform="translate(16, 16)">
		<text x="0" y="24" fill="#fe428e" font-size="18" font-family="Segoe UI, Arial, sans-serif" font-weight="600">Bob's Trophies</text>
	    <text x="0" y="44" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">bob</text>
  </g>
  
			<g transform="translate(16, 72)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#eb8c30"/>
					<text x="64" y="16" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#fe428e" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #1</text>
				</g>
			</g>
		

			<g transform="translate(178, 72)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#eb8c30"/>
					<text x="64" y="16" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#fe428e" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #2</text>
				</g>
			</g>
		

			<g transform="translate(340, 72)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#eb8c30"/>
					<text x="64" y="16" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#fe428e" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #3</text>
				</g>
			</g>
		

			<g transform="translate(16, 174)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#eb8c30"/>
					<text x="64" y="16" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#fe428e" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #4</text>
				</g>
			</g>
		

			<g transform="translate(178, 174)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#eb8c30"/>
					<text x="64" y="16" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#fe428e" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #5</text>
				</g>
			</g>
		

			<g transform="translate(340, 174)">
				<rect rx="10" width="150" height="90" fill="#00000020" />
				<g transform="translate(14, 14)">
					<path d="M20 30 L30 10 L40 30 L50 35 L35 45 L38 60 L30 52 L22 60 L25 45 L10 35 Z" fill="#eb8c30"/>
					<text x="64" y="16" fill="#fe428e" font-size="12" font-family="Segoe UI, Arial, sans-serif">Achievement</text>
					<text x="64" y="34" fill="#fe428e" font-size="11" font-family="Segoe UI, Arial, sans-serif" opacity="0.8">Trophy #6</text>
				</g>
			</g>
		
</svg>"
`;
